@@ -1,5 +1,7 @@
 = RubyMotion 3.1 =
 
+  * [iOS] Fixed a refression that made it impossible to set environment
+    variables from a host application and propagate them to extensions.
   * [iOS] Fixed a regression that made extensions crash at startup.
   * [iOS] Fixed a regression where a wrong info.plist would be generated which
     related to Background Fetch.
